<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModelRep"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>


    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/miduem_margin"
        app:layoutDescription="@xml/fragment_representative_scene">


        <TextView
            android:id="@+id/search_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/miduem_margin"
            android:text="@string/representative_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/TextAppearance.Large"/>


        <EditText
            android:id="@+id/address_line_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:layout_marginBottom="@dimen/miduem_margin"
            android:hint="@string/address_line_1"
            android:text="@{viewModelRep.addressInputMutableLiveData.line1}"
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_title" />


        <EditText
            android:id="@+id/address_line_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:autofillHints=""
            android:layout_marginBottom="@dimen/miduem_margin"
            android:hint="@string/address_line_2"
            android:text="@{viewModelRep.addressInputMutableLiveData.line2}"
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_1" />


        <EditText
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/city"
            android:text="@{viewModelRep.addressInputMutableLiveData.city}"
            android:layout_marginBottom="@dimen/miduem_margin"
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/state"
            app:layout_constraintTop_toBottomOf="@id/address_line_2" />


        <Spinner
            android:id="@+id/state"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autofillHints=""
            stateValue="@{viewModelRep.addressInputMutableLiveData.state}"
            android:entries="@array/states"
            android:layout_marginBottom="@dimen/miduem_margin"
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toEndOf="@id/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/city"
            app:layout_constraintBottom_toBottomOf="@id/city"/>


        <EditText
            android:id="@+id/zip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:layout_marginBottom="@dimen/miduem_margin"
            android:hint="@string/zip"
            android:inputType="number"
            android:maxLength="5"
            android:text="@{viewModelRep.addressInputMutableLiveData.zip}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/city"
            app:layout_constraintTop_toBottomOf="@id/city" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_search"
            android:text="@string/find_my_representatives"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/miduem_margin"
            app:layout_constraintTop_toBottomOf="@id/zip"
            style="@style/ButtonStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/miduem_margin"
            app:layout_constraintTop_toBottomOf="@id/button_search"
            android:text="@string/use_my_location"
            style="@style/ButtonStyle"/>

        <ProgressBar
            android:id="@+id/progressbar_load_rep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/representatives_recyclerView"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone"
            android:layout_marginTop="@dimen/miduem_margin"
            app:layout_constraintTop_toBottomOf="@id/button_location"/>

        <TextView
            android:id="@+id/representative_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/miduem_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_location" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/representatives_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/representative_title"
           />


        <TextView
            android:id="@+id/list_placeholder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:textAlignment="center"
            android:visibility="gone"
            motion:visibilityMode="ignore"
            app:layout_constraintTop_toBottomOf="@id/representative_title"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>